# RetroReelsUploader

./: LICENSE  README.md  index.html  privacy.html  privacy_policy.txt  pyproject.toml  terms.html  terms_of_service.txt  tiktok70jFb9YA1cqqHFFnlE20hjCoY94G1bQ7.txt
docs/: APP_REVIEW_TEXT.txt  DEMO.md
src/tiktok_desktop_publisher/: __init__.py  auth.py  config.py  gui.py
