[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-desktop-publisher"
version = "1.0.2"
description = "Reusable desktop interface and CLI for creator-approved short-form video publishing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ReelsUploader contributors"}]
dependencies = [
  "requests>=2.31,<3",
  "platformdirs>=4,<5",
  "keyring>=25,<27"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

[project.scripts]
reels-uploader = "tiktok_desktop_publisher.cli:main"
reels-uploader-gui = "tiktok_desktop_publisher.gui:main"
# Backward-compatible aliases.
tiktok-publisher = "tiktok_desktop_publisher.cli:main"
tiktok-publisher-gui = "tiktok_desktop_publisher.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
